<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Portfolio</string>

    <!-- MainActivity 영역 -->
    <string name="appbar_main_title">Portfolio</string>

    <string name="sub1_text_who_am_i">WHO AM I?</string>
    <string name="content_text_who_am_i">모바일 앱 만드는 것을 즐기고 있는 개발자입니다.</string>
    <string name="content_text_who_am_i_my_name">배진영</string>

    <string name="sub1_text_career">CAREER</string>
    <string name="content_text_career">-</string>

    <string name="sub1_text_skills">SKILLS</string>
    <string name="sub2_text_language">Language</string>
    <string name="sub2_text_database">Database</string>

    <string name="sub1_text_typical_project">TYPICAL PROJECT</string>

    <string name="sub2_text_github">GitHub</string>
    <string name="sub2_text_github_link"><u>https://github.com/stegano3094</u></string>
    <string name="sub2_text_github2">웹 포트폴리오</string>
    <string name="sub2_text_github_link2"><u>https://stegano3094.github.io/</u></string>

    <string name="sub1_text_contact_me">Contact me through email</string>
    <string name="sub2_text_contact_me">steganowork@naver.com</string>

    <!-- NoticeActivity 영역 -->
    <string name="purpose_title_text">포트폴리오 앱을 만든 목적</string>
    <string name="purpose_content_text">다른 사람들에게 나의 문제 해결 능력과 팀원과 협업이 가능한지,
    신입으로써 노력하는 것과 가능성을 보여주기 위해서 간단하게 앱을 만들어보았습니다. (수정 필요함)</string>

    <!-- xml의 dimension 영역-->
    <dimen name="content_layout_margin">8dp</dimen>
    <dimen name="sub1_title_margin_top">50dp</dimen>
    <dimen name="sub2_title_margin_top">20dp</dimen>
    <dimen name="cardview_project_radius">14dp</dimen>
    <dimen name="cardview_skill_radius">10dp</dimen>
    <dimen name="bottom_margin">20dp</dimen>
</resources>